# AICUP2023

./: .gitignore  Readme.md  data.py  metric.py  predict.py  pyproject.toml  requirements.txt  stdout.txt  train.py  utils.py
