[tool.poetry]
name = "ir-final"
version = "0.1.0"
description = ""
authors = ["jeff3071 <jeff563715@gmail.com>"]
readme = "README.md"
packages = [{include = "ir_final"}]

[tool.poetry.dependencies]
python = "^3.8"
datasets = "^2.14.6"
evaluate = "^0.4.1"
seqeval = "^1.2.2"
transformers = {extras = ["sentencepiece"], version = "^4.34.1"}
accelerate = "^0.24.1"
torch = ">=2.0.0, !=2.0.1, !=2.1.0"
peft = "^0.5.0"
matplotlib = "3.6.1"
tabulate = "^0.9.0"
pycountry = "^22.3.5"
nltk = "^3.8.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
